changed profile picture

--- a/data/projects.yml
+++ b/data/projects.yml
@@ -1,9 +1,9 @@
 - name: SuiteFit
-  description: Suite Fit is a moving app that allows you to see if your furniture/items will fit in an apartment before moving, giving you the confidence you need to commit to a move. If you are a real estate agent, the app also allows you to gauge client interest in specific apartments and close sales more easily. Inspired by all the stress-filled moves we've all experienced. For me, this project became a great learning experience in regards to the user authorization integration in Rails. Otherwise, I mostly implemented backend and real time features.
+  description: Suite Fit is a moving app that allows you to see if your furniture/items will fit in an apartment before moving, giving you the confidence you need to commit to a move. If you are a real estate agent, the app also allows you to gauge client interest in specific apartments and close sales more easily. Inspired by all the stress-filled moves we've all experienced. For me, this project became a great learning experience in regards to the user authorization integration in Rails. Otherwise, I mostly implemented backend and real time features, ass well as frontend features that involved JavaScript.
   image: projects/suite-fit-250x300.png
   team: 4 developers
   timeline: 2 weeks
-  role: Backend/Fullstack Developer
+  role: Fullstack Developer
   tools: <i class="devicon-rails-plain dev-icon"></i> <i class="devicon-javascript-plain dev-icon"></i> <i class="devicon-html5-plain dev-icon"></i><i class="devicon-css3-plain dev-icon"></i><i class="devicon-postgresql-plain dev-icon"></i><i class="devicon-heroku-plain dev-icon"></i>
   url: https://www.suitefit.tech
   github: https://github.com/RLMP44/SuiteFit
@@ -13,7 +13,7 @@
   image: projects/knighttime-250x300.png
   team: 4 developers
   timeline: 1 week
-  role: Backend/Fullstack Developer
+  role: Fullstack Developer
   tools: <i class="devicon-rails-plain dev-icon"></i> <i class="devicon-javascript-plain dev-icon"></i> <i class="devicon-html5-plain dev-icon"></i><i class="devicon-css3-plain dev-icon"></i><i class="devicon-postgresql-plain dev-icon"></i><i class="devicon-heroku-plain dev-icon"></i>
   url: https://knight-time-f246419c41c0.herokuapp.com/
   github: https://github.com/herah-s/KnightTime
